Glob source files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required(VERSION 2.6)
 project(sdl-rendering)
-add_executable(sdl-rendering main.cpp)
+file(GLOB SRCS *.cpp)
+add_executable(sdl-rendering ${SRCS})
